--- a/index.html
+++ b/index.html
@@ -476,6 +476,27 @@
             </li>
           </ul>
         </div>
+        <div class="container-subscribe">
+          <p class="subscribe">Subscribe</p>
+          <form action="#" class="subscribe-form">
+            <label class="label-subscribe" for="email">
+              <input
+                class="input-subscribe"
+                type="email"
+                name="email-subscribe"
+                id="email-subscribe"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button type="submit" class="subscribe-button">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-frame"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
@@ -560,7 +581,7 @@
             <label for="user-privacy" class="check-text">
               <span class="span-privace">
                 <svg class="check-icon" width="10" height="8">
-                  <use href="./images/icons.svg#icon-v  ector"></use>
+                  <use href="./images/icons.svg#icon-vector"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
