--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
-          <svg class="modal-suc-icon" width="8" height="8">
+          <svg class="modal-soc-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
