--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
         <div class="container-subscribe">
           <p class="subscribe">Subscribe</p>
           <form action="#" class="subscribe-form">
-            <label class="label-subscribe" for="email">
+            <label class="label-subscribe" for="email-subscribe">
               <input
                 class="input-subscribe"
                 type="email"
