--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
       </div>
     </footer>
 
-    <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-open" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close" data-modal-close>
+        <button type="button" class="modal-close">
           <svg class="modal-soc-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
