--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
       </div>
     </footer>
 
-    <div class="backdrop is-open" data-modal>
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="modal-soc-icon" width="8" height="8">
@@ -593,6 +593,5 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
   </body>
 </html>
